--- a/resources/views/schedule/log.edge
+++ b/resources/views/schedule/log.edge
@@ -3,28 +3,28 @@
         <div class="modal-content">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title">View Logs - [{titleLog}]</h4>
+            <h4 class="modal-title">View Logs</h4>
         </div>
         <div class="modal-body">
             <div class="row">
+                <div class="col-md-12">
+                    <p><strong>Schedule:</strong> <span class="text-primary">[{titleLog}]</span></p>
+                </div>
                 <div class="col-md-12">
                     <div class="table-responsive" style="max-height:400px;overflow-y:scroll">
                         <table class="table table-hover table-bordered no-margin-bottom">
                             <thead>
                                 <tr>
-                                    <th class="col-md-1 text-center vertical-align">Index</th>
-                                    <th class="col-md-2 text-center vertical-align">Time</th>
-                                    <th class="col-md-9 text-center vertical-align">Log</th>
+                                    <th class="text-center vertical-align" style="width: 5%">Index</th>
+                                    <th class="col-md-5 text-center vertical-align">Request</th>
+                                    <th class="col-md-5 text-center vertical-align">Response</th>
                                 </tr>
                             </thead>
                             <tbody>
                                 <tr ng-repeat="item in logs track by $index">
                                     <td class="text-center vertical-align">[{$index + 1}]</td>
-                                    <td class="vertical-align text-center">
-                                        <label class="label label-default block-item">[{summarizeDateTime(item.created_at, true)}]</label>
-                                        <label class="label label-default block-item">[{summarizeDateTime(item.updated_at, true)}]</label>
-                                    </td>
-                                    <td><p class="f-s-12" ng-bind-html="item.log"></p></td>
+                                    <td><p class="f-s-12" ng-bind-html="item.request"></p></td>
+                                    <td><p class="f-s-12" ng-bind-html="item.response"></p></td>
                                 </tr>
                                 <tr ng-show="logs.length == 0">
                                     <td colspan="3">No data...</td>
