fix: ngsanitize plugins

--- a/resources/views/layout/master.edge
+++ b/resources/views/layout/master.edge
@@ -30,6 +30,7 @@
     {{ script('/js/bootstrap.min.js' + '?v=' + config('app.version')) }}
     {{ script('/js/pnotify.custom.min.js' + '?v=' + config('app.version')) }}
     {{ script('/js/angular.min.js' + '?v=' + config('app.version')) }}
+    {{ script('/js/angular-sanitize.min.js' + '?v=' + config('app.version')) }}
     {{ script('/js/base-controller.js' + '?v=' + config('app.version')) }}
     @endsection
 
