optimize: config schedule notify via email

--- a/resources/views/schedule/form.edge
+++ b/resources/views/schedule/form.edge
@@ -22,6 +22,10 @@
                         <label>Note</label>
                         <input type="text" ng-model="schedule.note" class="form-control" />
                     </div>
+                    <div class="form-group">
+                        <label>Notification</label>
+                        <input type="text" ng-model="schedule.emails" class="form-control" placeholder="Enter multiple emails separated by commas" />
+                    </div>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
