fix: v2.log is not a function

--- a/resources/views/schedule/index.edge
+++ b/resources/views/schedule/index.edge
@@ -56,7 +56,7 @@
                                         </td>
                                         <td class="vertical-align text-center">
                                             <div class="schedule-action">
-                                                <button type="button" class="btn btn-sm btn-default" ng-click="log(item)" title="Log Item">
+                                                <button type="button" class="btn btn-sm btn-default" ng-click="viewLog(item)" title="Log Item">
                                                     <span class="glyphicon glyphicon-list-alt"></span>
                                                 </button>
                                                 <button type="button" class="btn btn-sm btn-warning" ng-click="clone(item)" title="Clone Item">
