--- a/resources/views/schedule/filter.edge
+++ b/resources/views/schedule/filter.edge
@@ -1,18 +1,20 @@
 <div class="row">
     <form>
-        <div class="col-md-3" style="margin-bottom:15px;">
+        <div class="col-md-6" style="margin-bottom: 5px;">
             <div class="form-group">
-                <label>Note &nbsp;</label>
-                <input type="text" class="form-control custom-input" ng-model="filter.note" ng-keypress="myEnter($event)" />
+                <label>Keywords &nbsp;</label>
+                <input type="text" class="form-control" ng-model="filter.terms" ng-keypress="myEnter($event)" placeholder="URL or Note..." />
             </div>
         </div>
-        <div class="col-md-3" style="margin-bottom:15px;">
+        <div class="col-md-3" style="margin-bottom: 5px;">
             <div class="form-group">
-                <label>URL &nbsp;</label>
-                <input type="text" class="form-control custom-input" ng-model="filter.link" ng-keypress="myEnter($event)" />
+                <label>Status &nbsp;</label>
+                <select class="form-control" ng-model="filter.status" ng-options="status.code as status.name for status in statuses">
+                    <option value="">All Statuses</option>
+                </select>
             </div>
         </div>
-        <div class="col-md-3" style="margin-bottom:15px;">
+        <div class="col-md-3" style="margin-bottom: 5px;">
             <div class="form-group">
                 <label>Project &nbsp;</label>
                 <select class="form-control" ng-model="filter.project_id" ng-options="project.id as project.name for project in projects">
@@ -20,9 +22,8 @@
                 </select>
             </div>
         </div>
-        <div class="col-md-3 text-center" style="margin-bottom:15px;">
+        <div class="col-md-12 text-center" style="margin-bottom:15px;">
             <div class="form-group">
-                <label style="display: block">&nbsp;</label>
                 <button type="button" class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> Search</button>
                 <button type="button" class="btn btn-danger" ng-click="reset()"><span class="glyphicon glyphicon-remove"></span> Reset</button>
             </div>
