--- a/resources/views/schedule/index.edge
+++ b/resources/views/schedule/index.edge
@@ -28,8 +28,8 @@
                                 <thead>
                                     <tr>
                                         <th class="text-center vertical-align" style="width: 5%">Index</th>
-                                        <th class="col-md-3 text-center vertical-align">Note</th>
-                                        <th class="col-md-4 text-center vertical-align">Time / URL</th>
+                                        <th class="col-md-5 text-center vertical-align">Schedule</th>
+                                        <th class="col-md-2 text-center vertical-align">Status</th>
                                         <th class="col-md-2 text-center vertical-align">Project</th>
                                         <th class="col-md-1 text-center vertical-align">Create<br />Update</th>
                                         <th class="text-center vertical-align">
@@ -42,12 +42,15 @@
                                 <tbody>
                                     <tr ng-repeat="item in schedules track by $index">
                                         <td class="vertical-align text-center">[{$index + 1}]</td>
-                                        <td class="vertical-align">[{item.note}]</td>
-                                        <td class="vertical-align">
-                                            <p>[{item.run_at}]</p>
-                                            <a href="[{item.url}]" target="_blank">[{item.url}]</a>
+                                        <td class="vertical-align schedule-info">
+                                            <p>Time: [{item.run_at}]</p>
+                                            <p>URL: <a href="[{item.url}]" target="_blank">[{item.url}]</a></p>
+                                            <p ng-if="item.note">Note: [{item.note}]</p>
                                         </td>
-                                        <td>
+                                        <td class="vertical-align">
+                                            [{ getByField(statuses, 'code', item.status).name }]
+                                        </td>
+                                        <td class="vertical-align">
                                             <span ng-if="item.project_id">[{ getByField(projects, 'id', item.project_id).name }]</span>
                                         </td>
                                         <td class="vertical-align text-center">
