--- a/resources/views/schedule/filter.edge
+++ b/resources/views/schedule/filter.edge
@@ -25,6 +25,7 @@
         <div class="col-md-12 text-center" style="margin-bottom:15px;">
             <div class="form-group">
                 <button type="button" class="btn btn-info" ng-click="search()"><span class="glyphicon glyphicon-search"></span> Search</button>
+                <button type="button" class="btn btn-success" ng-click="importSchedule()"><span class="glyphicon glyphicon-import"></span> Import Schedule</button>
                 <button type="button" class="btn btn-danger" ng-click="reset()"><span class="glyphicon glyphicon-remove"></span> Reset</button>
             </div>
         </div>
