--- a/resources/views/schedule/index.edge
+++ b/resources/views/schedule/index.edge
@@ -23,6 +23,7 @@
                     </div>
                     <div class="panel-body">
                         @include('schedule.filter')
+                        @include('schedule.import')
                         <div class="table-responsive">
                             <table class="table table-hover table-bordered no-margin-bottom">
                                 <thead>
@@ -114,6 +115,6 @@
         @include('schedule.log')
         @include('project.form')
     </div>
-    
+
 @endsection
 
